the rest forms in html

--- a/sass/layout/button.scss
+++ b/sass/layout/button.scss
@@ -1,7 +1,8 @@
 @use "../base/color";
 button {
+  margin: 20px;
   width: 150px;
-  height: 50px;
+  height: 30px;
   background: color.$head-color;
   color: white;
   text-transform: uppercase;
