--- a/sass/layout/button.scss
+++ b/sass/layout/button.scss
@@ -20,7 +20,7 @@ button {
     left: 0;
     z-index: -1;
     content: "";
-    background-color: lightblue;
+    /*  background-color: lightblue; */
     position: absolute;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
