--- a/sass/layout/form.scss
+++ b/sass/layout/form.scss
@@ -1,5 +1,26 @@
 @use "../base/color";
 
+//jesus
+/* .formwrapper {
+  position: absolute;
+  top: 0;
+
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(185, 180, 240, 0.6);
+}
+form {
+  background-color: rgba(191, 190, 204, 0.98);
+  width: 50vw;
+  height: 100%;
+  border-radius: 10px;
+  padding: 20px 0px 50px 0px;
+  box-shadow: 0px 0px 100px var(--bg-color);
+} */
+
 .form-screen {
   position: relative;
   align-self: center;
