--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -1,3 +1,13 @@
 @forward "header";
 @forward "button";
 @forward "form";
+@forward 'cards';
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  margin: 0;
+  box-sizing: border-box;
+  background-color: rgb(255, 255, 255);
+}
