--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -2,3 +2,12 @@
 @forward "button";
 @forward "form";
 @forward 'cards';
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  margin: 0;
+  box-sizing: border-box;
+  background-color: rgb(248, 117, 117);
+}
