--- a/sass/layout/button.scss
+++ b/sass/layout/button.scss
@@ -3,12 +3,12 @@ button {
   margin: 20px;
   width: 100px;
   height: 30px;
-  background-color: grey;
-  /*  background: color.$head-color; */
+
+  background: color.$head-color;
   color: white;
   text-transform: to-lower-case($string: "");
   font-weight: bold;
-  /* border: 2px solid color.$head-color; */
+  border: 2px solid color.$head-color;
   border-radius: 40px;
   overflow: hidden;
   cursor: pointer;
