--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,8 @@
 @use "../base/fonts";
 @use "../base/color";
 
-header {
-  height: auto;
-  width: 100%;
-  background-color: color.$head-color;
-}
-
-header {
-  h1 {
+/*header {
+    h1 {
     font-family: fonts.$monoton;
     font-size: 80px;
     font-weight: 200;
@@ -16,8 +10,8 @@ header {
     color: white;
     padding: 1vw;
     text-align: center;
-  }
-}
+  } 
+}*/
 .amount {
   width: 50%;
 }
