--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -2,12 +2,11 @@
 @forward "button";
 @forward "form";
 @forward 'cards';
+@forward 'grids';
 * {
-  margin: 0;
+  margin: 5px;
   padding: 0;
 }
 body {
-  margin: 0;
   box-sizing: border-box;
-  background-color: rgb(248, 117, 117);
 }
