--- a/sass/layout/_cart_box.scss
+++ b/sass/layout/_cart_box.scss
@@ -19,8 +19,9 @@ h1 {
 }
 .your_order {
   display: flex;
-  background-color: darkkhaki;
-  justify-content: center;
+  background-color: #588157;
+  justify-content: start;
+  border-radius: 5px;
 }
 #add {
   display: flex;
@@ -29,6 +30,7 @@ h1 {
   justify-content: center;
   align-items: center;
   border: none;
+  cursor: pointer;
 }
 #counter {
   background-color: rgb(241, 237, 243);
@@ -44,6 +46,7 @@ h1 {
   justify-content: center;
   align-items: center;
   border: none;
+  cursor: pointer;
 }
 #amount {
   display: flex;
@@ -59,6 +62,7 @@ h1 {
   display: block;
   margin: 10px;
 }
+//button remove
 .c {
   border: none;
   height: 20px;
@@ -66,9 +70,14 @@ h1 {
   border-radius: 3px;
   background-color: rgb(187, 184, 184);
   color: rgb(32, 44, 33);
+  cursor: pointer;
 }
 .box_order {
   display: grid;
-  gap: 10px;
+}
+.pay {
+  display: flex;
   justify-content: center;
+  gap: 10px;
+  margin: 10px;
 }
