--- a/sass/layout/form.scss
+++ b/sass/layout/form.scss
@@ -5,10 +5,8 @@
   position: relative;
   align-self: center;
   padding: 2vw 0;
-  background-color: #3f3f50;
-
-  border: 1px solid color.$head-color;
-  border-radius: 10px;
+  background-color: #588157;
+  border-radius: 5px;
   position: absolute;
   top: 15%;
   left: 26%;
@@ -20,7 +18,6 @@
 #modal-one,
 #payment,
 #confirm {
-  display: flex;
   width: 50vw;
   flex-direction: column;
   align-items: center;
@@ -34,12 +31,12 @@
 
 #progress-bar {
   display: flex;
-  margin: 0 3vw;
-  align-content: center;
+  /*  margin: 0 3vw; */
+  justify-content: center;
   align-items: center;
 
   h2 {
-    border: 1px solid color.$head-color;
+    border: 1px solid white;
     display: block;
     padding: 0.5vw;
     border-radius: 50%;
@@ -50,8 +47,8 @@
   }
 
   .fill {
-    color: white;
-    background-color: black;
+    color: #588157;
+    background-color: rgb(255, 255, 254);
   }
 }
 
@@ -80,14 +77,14 @@ input[type="button"]:not(.close) {
   position: absolute;
   top: -2vw;
   right: -1vw;
-  border: 1px solid red;
+  border: 1px solid rgb(245, 240, 240);
   border-radius: 5vw;
   width: clamp(50px, 2vw, 2vw);
   height: clamp(50px, 2vw, 2vw);
 }
 
 .close:hover {
-  background-color: purple;
+  background-color: #090a09;
   cursor: pointer;
   color: white;
 }
@@ -134,32 +131,48 @@ input[type="number"] {
   }
 }
 .order_container {
-  background-color: white;
+  display: grid;
+  justify-content: center;
+  background-color: transparentize($color: #92a395, $amount: 0);
+  border-radius: 5px;
+  gap: 10px;
+  margin: 10px;
+  border: none;
+  /*  background-color: #c5cec5; */
 }
 .order_container form {
-  width: 22vw;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  /* width: 22vw;
   margin-left: 4vw;
+  margin-top: -40px; */
 }
 
 .form-group {
   display: grid;
   box-sizing: border-box;
-  padding: 0.5vw 0;
+  padding: auto;
+  margin-left: 10%;
+  margin-right: 20%;
+  /* padding: 0.5vw 0; */
   label {
     font-family: "Courier New", Courier, monospace;
-    color: black;
+    color: rgb(241, 239, 239);
     font-size: clamp(18px, 1.2vw, 1.2vw);
   }
 
   input,
   select {
+    flex-wrap: wrap;
     padding: 1.2vh;
-    background: transparent;
-    border: 1px solid black;
+    background: white;
+    border: none;
+    border-radius: 3px;
 
-    margin: 0.5vw 0 0.2vw 0;
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    color: black;
+    color: rgb(88, 87, 87);
     width: clamp(200px, 20vw, 20vw);
   }
 
@@ -172,7 +185,7 @@ input[type="number"] {
 .error {
   color: red;
   font-family: sans-serif;
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .hidden {
@@ -191,4 +204,8 @@ input[type="number"] {
   align-items: center;
   align-content: center;
   font-weight: bolder;
+}
+#pay_thanks {
+  border: none;
+  color: gainsboro;
 }
