--- a/sass/layout/_button.scss
+++ b/sass/layout/_button.scss
@@ -20,7 +20,13 @@ button.pay-confirm {
   color: wheat;
   gap: 10px;
 }
-
+button.pay-confirm:hover {
+  border: 1px solid white;
+}
+.atc:hover {
+  background-color: orange;
+  border: 1px solid black;
+}
 /* .atc
 .confirm {
   margin: 20px;
@@ -74,4 +80,8 @@ button.pay-confirm {
   margin: auto;
   margin-bottom: 20px;
   cursor: pointer;
+}
+
+.submit:hover {
+  border: 1px solid white;
 }
