--- a/sass/layout/_cart_box.scss
+++ b/sass/layout/_cart_box.scss
@@ -61,6 +61,8 @@ h1 {
 #addtc {
   display: block;
   margin: 10px;
+  padding: 1vw;
+  background-color: var(--font-color-two);
 }
 //button remove
 .c {
